<resources>
    <string name="app_name">MyMusic</string>
    <string name="str_welcome_tiaoguo">跳过</string>
    <string name="str_welcome_text1">听着别人的歌</string>
    <string name="str_welcome_text2">走着自己的路</string>
    <string name="str_welcome_text3">随心听，随心走</string>
    <string name="str_welcome_text4">打开音乐的世界，关闭孤独的自己</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
