<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/welcome"
    tools:context=".welcome.WelcomeActivity">

    <TextView
        android:id="@+id/skip_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_welcome_tiaoguo"
        android:textColor="@color/colorWhite"
        android:layout_alignParentRight="true"
        android:layout_margin="25dp"
        android:textSize="18sp" />

    <TextView
        android:layout_width="25dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="25dp"
        android:text="@string/str_welcome_text1"
        android:textColor="@color/colorWhite"
        android:textSize="25sp" />

    <TextView
        android:layout_width="25dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="25dp"
        android:paddingTop="100dp"
        android:text="@string/str_welcome_text2"
        android:textColor="@color/colorWhite"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@mipmap/app_img" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:text="@string/str_welcome_text3"
                android:textColor="@color/colorWhite"
                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/str_welcome_text4"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />
    </LinearLayout>

</RelativeLayout>